[project]
name = "codinerf"
description = "CoDiNerf repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["codinerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
codinerf = 'codinerf.codinerf_config:codinerf'
